# simple-news-backed

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  example.env  pyproject.toml
src/newsapp/: manage.py
src/newsapp/news/: admin.py  models.py  serializers.py  urls.py  views.py
src/newsapp/news/migrations/: 0001_initial.py  0002_news_updated_at.py  0003_news_is_banned_news_is_published.py
src/newsapp/newsapp/: asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
src/newsapp/users/: serializers.py  urls.py  views.py
