[tool.poetry]
name = "simple-news-backed"
version = "0.1.0"
description = ""
authors = ["dmytromayor <mayor4090@gmail.com>"]
readme = "README.md"
packages = [{include = "src/"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
celery = "^5.2.7"
redis = "^4.5.1"
django-cors-headers = "^3.14.0"
mysqlclient = "^2.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.2"
mypy = "^1.1.1"
pre-commit = "^3.2.0"

[tool.flake8]
ignore = ['F401']
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
ignore_missing_imports = true



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
